[package]
description = " Netfilter NFQUEUE high-level bindings"
license = "GPL-2.0+"
keywords = ["netfilter","queue","nfqueue"]
homepage = "https://github.com/chifflier/nfqueue-rs"
repository = "https://github.com/chifflier/nfqueue-rs.git"

name = "nfqueue"
version = "0.9.1"
authors = [ "Pierre Chifflier <chifflier@wzdftpd.net>" ]

build = "src/generation/generate_bindings.rs"

[build-dependencies]
bindgen = "^0.26"

[dependencies]
libc = "^0.2"

[dev-dependencies]
pnet = "0.17.1"
